# project

./: README.md
database/: CMakeLists.txt  package.xml
database/include/: Database.h  feature.h
database/src/: Database.cpp  Database_backup.cpp  README.md  main.cpp  main_backup.cpp
detection/: CMakeLists.txt  goapParams.txt  goapParamsRSD.txt  goodParameters.txt  package.xml
detection/doc/: Parameters.ods
detection/include/: Blackboard.h  ClassLoadManager.h  Control.h  Model.h  ProcessedCloud.h  Result.h  RosParameter.h  RosParameterManager.h  Segment.h
detection/include/descriptor/: CShotCreator.h  CShotDescriptors.h  DescriptorCreator.h  Descriptors.h  FPFHCreator.h  FPFHDescriptors.h  RSDCreator.h  RSDDescriptors.h  ShapeContextCreator.h  ShapeContextDescriptors.h  ShotCreator.h  ShotDescriptors.h  UShapeContextCreator.h  UShapeContextDescriptors.h
detection/include/evaluation/: CorrespondenceVoting.h  CorrespondenceVotingICP.h  Guesser.h  ResultEvaluation.h
detection/include/keypoint/: ISSCreator.h  KeypointCreator.h  NDCreator.h  VoxelGridCreator.h
detection/include/matching/: ColorMatching.h  KColorMatching.h  KSColorMatching.h  Matching.h  SimpleMatching.h
detection/include/pose_estimator/: GCClustering.h  HoughClustering.h  PoseEstimator.h
detection/include/segmentation/: Segmentation.h  SegmentsCreator.h
detection/include/visualization/: visualization.h  visualization_vis.txt
detection/launch/: detection.launch
detection/src/: Blackboard.cpp  ClassLoadManager.cpp  Control.cpp  RosParameterManager.cpp  detection.cpp  evaluation.cpp  evaluation2.cpp  main.cpp  main2.cpp
detection/src/descriptor/: CShotCreator.cpp  FPFHCreator.cpp  RSDCreator.cpp  ShapeContextCreator.cpp  ShotCreator.cpp  UShapeContextCreator.cpp
detection/src/evaluation/: CorrespondenceVoting.cpp  CorrespondenceVotingICP.cpp  Guesser.cpp
detection/src/keypoint/: ISSCreator.cpp  NDCreator.cpp  VoxelGridCreator.cpp
detection/src/matching/: ColorMatching.cpp  KColorMatching.cpp  KSColorMatching.cpp  SimpleMatching.cpp
detection/src/pose_estimator/: GCClustering.cpp  HoughClustering.cpp
detection/src/segmentation/: Segmentation.cpp  SegmentsCreator.cpp
detection/src/visualization/: visualization.cpp  visualization_vis.txt
detection/widgets/: DetectionWidget.cpp  DetectionWidget.h  DetectionWidget.ui
